# kruda

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LAUNCH_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_GUIDE.md  app_routes_test.go  app_serve.go  app_serve_problem_test.go  app_serve_wing.go  bench_test.go  bind.go  bind_extra_test.go  bind_fuzz_test.go  bind_pbt_test.go  bind_test.go  codecov.yml  compile_test.go  concurrent.go  concurrent_pbt_test.go  concurrent_test.go  config.go  config_fasthttp.go  config_fasthttp_windows.go  config_options_test.go  config_test.go  config_transport_test.go  config_wing.go  config_wing_stub.go  config_wing_test.go  container.go  container_methods_test.go  container_pbt_test.go  container_test.go  context.go  (+187 more)
.cursor/: rules
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
bench/: 01_fasthttp_kruda_test.go  02_fasthttp_fiber_test.go  03_http_kruda_test.go  04_http_gin_test.go  05_http_echo_test.go  README.md  allocation_test.go  baseline-v1.1.3.txt  baseline.txt  echo_test.go  fasthttp_test.go  fiber_test.go  gin_test.go  go.mod  go.sum  helpers_test.go  kruda_test.go  profile_test.go  run_cross_bench.sh
bench/reproducible/actix/: Cargo.toml
bench/reproducible/actix/src/: main.rs
benchmarks/: data.js
docs/: PLAYGROUND_DEPLOYMENT.md  RELEASING.md  SECURITY.md  architecture-analysis.md  faq.md  github-discussion-welcome.md  index.md  kruda-spec.md  launch-posts-guide.md  package-lock.json  package.json  release-process.md  troubleshooting.md
examples/: README.md
(+2453 files in other folders)
